--- a/Languages/default-cz.xml
+++ b/Languages/default-cz.xml
@@ -480,7 +480,7 @@
 			</menu>
 			<separator/>
 			<menu text="_Webové stránky">
-				<item id="ID_HELP_HOMEPAGE" text="_Shareaza.com"/>
+				<item id="ID_HELP_HOMEPAGE" text="_Shareaza site"/>
 				<separator/>
 				<item id="ID_HELP_FORUMS" text="Diskus_e Shareaza"/>
 				<!-- <item id="ID_HELP_UPDATE" text="Poslední novinky"/>
@@ -571,7 +571,7 @@
 			</menu>
 			<separator/>
 			<menu text="_Webové stránky">
-				<item id="ID_HELP_HOMEPAGE" text="_Shareaza.com"/>
+				<item id="ID_HELP_HOMEPAGE" text="_Shareaza site"/>
 				<separator/>
 				<item id="ID_HELP_FORUMS" text="Diskus_e Shareaza"/>
 				<!-- <item id="ID_HELP_UPDATE" text="Poslední novinky"/>
@@ -656,7 +656,7 @@
 			</menu>
 			<separator/>
 			<menu text="_Webové stránky">
-				<item id="ID_HELP_HOMEPAGE" text="_Shareaza.com"/>
+				<item id="ID_HELP_HOMEPAGE" text="_Shareaza site"/>
 				<separator/>
 				<item id="ID_HELP_FORUMS" text="Diskus_e Shareaza"/>
 				<!-- <item id="ID_HELP_UPDATE" text="Poslední novinky"/>
@@ -2077,7 +2077,7 @@
 		<text>Většina torrentů vytvořených programy by vám měla dovolit opravit tento torrent, takže
 		po opravě bude řádně pracovat ve všech aplikacích BitTorrent.</text>
 		<newline gap="8"/>
-		<link target="http://www.shareaza.com/help/?torrentencoding">Klikněte sem pro další pomoc</link>
+		<link target="http://shareaza.sourceforge.net/help/?torrentencoding">Klikněte sem pro další pomoc</link>
 		<text>, nebo si stáhněte software pro opravení torrentu.</text>
 </document>
 
@@ -2530,7 +2530,7 @@
   <string id="8007" value="Nejsou spuštěna žádná aktivní hledání. Klikněte zde pro vyhledání souborů."/>
   <string id="8008" value="Shareaza dokončila stahování novější verze (%s).  Chcete ji hned aktualizovat?\n\nPokud zvolíte Ano, Shareaza se dočasně ukončí aby se mohla nainstalovat aktualizace."/>
   <string id="8009" value="Opravdu chcete vymazat skin &quot;%s&quot;?  Tento skin nemůže být odstraněný."/>
-  <string id="8010" value="Toto je předběžně uvolněná verze Shareazy, beta testovací doba skončila.  Prosím stáhněte si plnou oficiální verzi z www.shareaza.com."/>
+  <string id="8010" value="Toto je předběžně uvolněná verze Shareazy, beta testovací doba skončila.  Prosím stáhněte si plnou oficiální verzi z http://shareaza.sourceforge.net/."/>
   <string id="8011" value="Změna prohlížeče musí zavřít všechna okna které máte otevřená. Chcete pokračovat"/>
 	<string id="8012" value="Torrent Information"/>
 	<string id="8060" value="Režim Hub/Ultrapeer s uživatelem %lu.  %s v místní knihovně."/>
@@ -4052,9 +4052,9 @@
 		<control caption="Víte, že je Shareaza 100% free?"/>
 		<control caption="Shareaza neobsahuje žádné &quot;spyware&quot;, &quot;adware&quot; nebo další podobný software. Nezobrazuje jakékoli reklamy nebo &quot;popups&quot;, (vyskakovací okna).{n}{n}Jestliže někdy uvidíte reklamu nebo &quot;popups&quot; při používání Shareazy, určitě nepocházejí z našeho programu."/>
 		<control caption="Bohužel hodně jiných programů obtěžuje s nežádoucí reklamou nebo spayware, takže pokud uvidíte něco podezřelého, zkontrolujte váš PC programem Ad-aware nebo podobným programem na odstranění těchto špiónů."/>
-		<control caption="Pro získání Shareazy nemusíte platit žádné peníze.  Shareaza může být volně stažena z www.shareaza.com.  Jestliže jste  někomu zaplatili za Shareazu, měli by jste požadovat okamžitě vrácení peněz."/>
+		<control caption="Pro získání Shareazy nemusíte platit žádné peníze.  Shareaza může být volně stažena z http://shareaza.sourceforge.net/.  Jestliže jste  někomu zaplatili za Shareazu, měli by jste požadovat okamžitě vrácení peněz."/>
 		<control caption="Shareaza respektuje své uživatele!"/>
-		<control caption="www.shareaza.com"/>
+		<control caption="http://shareaza.sourceforge.net/"/>
 		<control caption="Zavřít"/>
 	</dialog>
 
@@ -4065,7 +4065,7 @@
 		<control caption="Unfortunately, a lot of file sharers don't know what they're missing!"/>
 		<control caption="Pokud víte o někom kdo by chtěl používat Shareazu, ať nový uživatel nebo ten kdo již používá nějaký jiný, horší program pro sdílení, nechte jej vyzkoušet ať pozná co je lepší alternativa?"/>
 		<control caption="Budete mít dobrý pocit že jste pomohli k něčemu lepšímu!"/>
-		<control caption="www.shareaza.com"/>
+		<control caption="http://shareaza.sourceforge.net/"/>
 		<control caption="OK"/>
 	</dialog>
 
